--- a/s15-todo-list/public/index.html
+++ b/s15-todo-list/public/index.html
@@ -19,6 +19,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://kit.fontawesome.com/761625d285.js"></script>
+
     <title>React App</title>
   </head>
   <body>
