--- a/s19-dad-jokes/public/index.html
+++ b/s19-dad-jokes/public/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="bg"></div>
     <div id="root"></div>
   </body>
 </html>
